asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_constructor_parameter.asteriacore
data F (f : Type -> Type) where
   | MkF (x : f) : Test$F(f)
   ;;
